<resources>

    <!--STRINGS OF BUTTONS-->
    <string name="app_name">YAWA</string>
    <string name="choose_city">City ?</string>
    <string name="next">Next days</string>
    <string name="detail">Details</string>
    <string name="seeCredits">Credits</string>
    <string name="refresh">Refresh</string>

    <!--STRINGS OF DETAIL-->
    <string name="detail_city_name">City name</string>
    <string name="detail_lon">Longitude</string>
    <string name="detail_lat">Latitude</string>
    <string name="detail_weather_desc">Weather description</string>
    <string name="detail_curr_temp">Current temperature</string>
    <string name="detail_curr_pressure">Current pressure</string>
    <string name="detail_curr_hum">Current humidity</string>
    <string name="detail_temp_min">Minimum temperature</string>
    <string name="detail_temp_max">Maximum temperature</string>
    <string name="detail_wind_speed">Wind speed</string>
    <string name="detail_wind_deg">Wind degrees</string>
    <string name="detail_clouds">Clouds</string>
    <string name="detail_rain">Rain</string>
    <string name="detail_snow">Snow</string>
    <string name="detail_date">Date</string>
    <string name="detail_sunrise">Sunrise</string>
    <string name="detail_sunset">Sunset</string>
    <string name="detail_country">Country</string>
    <string name="detail_description">Description</string>
    <string name="detail_temperature">Temperature</string>

    <!--STRINGS OF FIRST ACTIVITY-->
    <string name="main_city">City</string>
    <string name="main_country">Country</string>
    <string name="main_date">Date</string>
    <string name="main_temp">Temperature</string>

    <!--STRINGS OF SEARCH ACTIVITY-->
    <string name="search_city">Search City</string>
    <string name="search">Search</string>

    <!--STRINGS OF CREDITS ACTIVITY-->
    <string name="developedBy">Developed by: </string>
    <string name="dataSource">Weather Data Source: </string>
    <string name="fabio">Fabio Parreirinha</string>
    <string name="dani">Daniel Cabral</string>
    <string name="weathermap">https://openweathermap.org/</string>

    <!--STRINGS OF PREFERENCES ACTIVITY-->
    <string name="AddCity">Add City To List</string>
    <string name="SelectCity">Select Favorite City</string>
    <string name="AutoUpdate">Set Auto Update</string>
    <string name="Notifications">Set Notifications</string>
    <string name="BatteryLevel">Set Battery Level For Network</string>

</resources>
