<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_basic_weather_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pdm.isel.yawa.BasicWeatherInfoActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:weightSum="1">

        <TextView
            android:text="@string/detail_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            style="@style/Titles"/>

        <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/future_date"
            android:textAlignment="center"
            style="@style/MainInfo"/>

        <TextView
            android:text="@string/detail_temp_max"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            style="@style/Titles"/>

        <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/future_temp_max"
            android:textAlignment="center"
            style="@style/MainInfo"/>

        <TextView
            android:text="@string/detail_temp_min"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:textAlignment="center"
            style="@style/Titles"/>

        <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/future_temp_min"
            android:textAlignment="center"
            style="@style/MainInfo"/>

        <TextView
            android:text="@string/detail_curr_pressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            android:textAlignment="center"
            style="@style/Titles"/>

        <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/future_pressure"
            android:textAlignment="center"
            style="@style/MainInfo"/>

        <TextView
            android:text="@string/detail_curr_hum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView12"
            android:textAlignment="center"
            style="@style/Titles"/>

        <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/future_hum"
            android:textAlignment="center"
            style="@style/MainInfo"/>

        <TextView
            android:text="@string/detail_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:textAlignment="center"
            style="@style/Titles"/>

        <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/future_description"
            android:textAlignment="center"
            style="@style/MainInfo"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="118dp"
            app:srcCompat="@android:drawable/alert_light_frame"
            android:id="@+id/future_image" />
    </LinearLayout>
</RelativeLayout>
