<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_preferences"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pdm.isel.yawa.PreferencesActivity">

    <Button
        android:id="@+id/SelectCityButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:text="@string/SelectCity"
        android:layout_alignParentTop="true"
        android:onClick="onSelectCity" />

    <Button
        android:id="@+id/PreferencesAutoUpdateButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:text="@string/AutoUpdate"
        android:onClick="onUpdateIntervalSetting"
        android:layout_below="@id/SelectCityButton" />

    <Button
        android:id="@+id/PreferencesNotificationButton"
        android:layout_below="@id/PreferencesAutoUpdateButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:text="@string/Notifications"
        android:onClick="onNotificationSettings" />

    <Button
        android:id="@+id/PreferencesBatteryLevelButton"
        android:layout_below="@id/PreferencesNotificationButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:text="@string/BLevel"
        android:onClick="onBatteryLevelSettings" />


</RelativeLayout>
