<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="pdm.isel.yawa.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.10"
            android:orientation="vertical"
            android:weightSum="1">
            g

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/menu_Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onMenu"
                    android:text="Menu" />

                <Button
                    android:id="@+id/refresh_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onRefresh"
                    android:text="@string/refresh" />

                <Button
                    android:id="@+id/credits_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onCredits"
                    android:text="@string/seeCredits" />

            </LinearLayout>

            <TextView
                android:id="@+id/main_city"
                style="@style/MainInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.24"
                android:gravity="bottom|center"
                android:textSize="45dp" />

            <TextView
                android:id="@+id/main_country"
                style="@style/MainInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/main_description"
                style="@style/MainInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/main_temp"
                style="@style/MainInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.24"
                android:elevation="1dp"
                android:gravity="center"
                android:textSize="80dp" />

            <ImageView
                android:id="@+id/main_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.43"
                app:srcCompat="@android:drawable/dialog_frame" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/detail_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onDetails"
                android:text="@string/detail" />

            <Button
                android:id="@+id/more_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onNext"
                android:text="@string/next" />

            <Button
                android:id="@+id/city_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onCity"
                android:text="@string/choose_city" />


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
