<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pdm.isel.yawa.DetailedWeatherInfoActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="180dp"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/detail_city_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/detail_name"
                android:textAlignment="center" />

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/textView14"
                android:textAlignment="center" />

            <TextView
                android:text="@string/detail_country"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/textView16"
                android:textAlignment="center" />

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/textView18"
                android:textAlignment="center" />

            <TextView
                android:text="@string/detail_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/textView17"
                android:textAlignment="center" />

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/textView15"
                android:textAlignment="center" />

            <TextView
                android:text="@string/detail_lat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/textView10"
                android:textAlignment="center" />

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/textView13"
                android:textAlignment="center" />

            <TextView
                android:text="@string/detail_lon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/textView12"
                android:textAlignment="center" />

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/textView11"
                android:textAlignment="center" />

            <TextView
                android:text="@string/detail_temperature"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/textView8"
                android:textAlignment="center" />

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/textView9"
                android:textAlignment="center" />

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/textView5"
                android:textAlignment="center" />

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/textView7"
                android:textAlignment="center" />

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/textView4"
                android:textAlignment="center" />

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/textView3"
                android:textAlignment="center" />

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/textView2"
                android:textAlignment="center" />

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/textView"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="180dp"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/alert_light_frame"
                android:id="@+id/imageView" />

            <TextView
                android:text="@string/detail_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView33"
                android:textAlignment="center" />

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView32"
                android:textAlignment="center" />

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView27"
                android:textAlignment="center" />

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView30"
                android:textAlignment="center" />

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView31"
                android:textAlignment="center" />

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView29"
                android:textAlignment="center" />

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView28"
                android:textAlignment="center" />

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView25"
                android:textAlignment="center" />

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView26"
                android:textAlignment="center" />

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView19"
                android:textAlignment="center" />

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView24"
                android:textAlignment="center" />

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView23"
                android:textAlignment="center" />

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView22"
                android:textAlignment="center" />

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView21"
                android:textAlignment="center" />

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView20"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
